Fixes alignment of intro text.

--- a/css.css
+++ b/css.css
@@ -15,4 +15,5 @@ body {
   border-radius: 15px;
   background-color: lightgrey;
   padding: 5px;
+  text-align: left;
 }
